@@ -1,3 +1,11 @@
+2007-04-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/termdocmatrix.R (textvector): Stemming is now performed before
+	erasing stopwords.
+	(weightMatrix): Adapted to handle sparse matrices.
+	(TermDocMatrix): Sparse matrix is now efficiently built by
+	direct stepwise insertion of row values into it.
+
 2007-04-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* DESCRIPTION: Replaced \pkg{filehashSQLite} with \pkg{filehash}
